# deepshell

./: .gitignore  LICENSE  README.md  deepseek_shell.py  deepshell  intall_ollama.sh  main.py  ollama_wrapper.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
chat/: ai_input_handler.py  chat_manager.py  filtering.py  input_handler.py  manager.py  output_renderer.py  stream_handler.py  streamer.py  user_input.py
chatbot/: deployer.py  helper.py  history.py  manager.py
chatbot_manager/: chatbot_manager.py
config/: enum.py  file_utils_config.py  settings.py  system_prompts.py
ollama_client/: api_client.py  client_deployer.py  stream_handler.py  validator.py
pipeline/: pipe_filter.py
src/: main.py
src/chatbot/: deployer.py  helper.py  history.py
src/config/: system_prompts.py
src/deepshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ollama_client/: validator.py
src/pipeline/: pipe_filter.py
src/ui/: printer.py  rendering.py  style.css  ui.py
src/utils/: args_utils.py  command_processor.py  file_utils.py  logger.py  shell_utils.py
ui/: popups.py  printer.py  rendering.py  style.css  ui.py  ui_manager.py
utils/: args_utils.py  command_processor.py  file_utils.py  logger.py  pipe_utils.py  shell_utils.py  symlink_utils.py
